fix: fix text visualization in the item cards on smaller screens

--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -24,7 +24,7 @@
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     transform: translate(1px, 1px);
     .block-card__image {
-      filter: brightness(0.5) sepia(20%);
+      filter: brightness(0.3) sepia(20%);
       background-size: auto 120%;
     }
     .block-card__description {
@@ -44,11 +44,12 @@
   left: 1em;
   padding: 1em;
   color: $color_secondary;
-  font-family: $font-inter;
+  font-family: $font-jomolhari;
   line-height: 1.5;
   font-size: 0.8rem;
   transition: 0.3s;
   z-index: 3;
+
   cursor: default;
   @media (max-width: 650px) {
     bottom: 55%;
@@ -89,26 +90,29 @@
   height: calc(100% - $size_block-item_img-height);
   padding: 0.6em;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 3fr 1fr;
   gap: 5px;
   & .block-card__item-title {
     font-family: $font-inter;
-    font-size: 0.9rem;
+    font-size: 12.5px;
     @media (max-width: 650px) {
-      font-size: 0.8rem;
+      font-size: 11px;
     }
   }
   & .block-card__item-brand {
     font-family: $font-jomolhari;
-    font-size: 0.8rem;
+    font-size: 11.5px;
     @media (max-width: 650px) {
-      font-size: 0.7rem;
+      font-size: 11px;
     }
   }
   & .block-card__price {
     font-family: $font-inter;
+    position: absolute;
+    bottom: 10px;
+
     @media (max-width: 650px) {
-      font-size: 0.8rem;
+      font-size: 12px;
     }
   }
   & .block-card__cart {
@@ -153,7 +157,8 @@
 
 /* -------------- list ---------------- */
 .list-card.block-card {
-  width: 90%;
+  margin: 15px 20px;
+  width: 100%;
   height: 60px;
   display: flex;
   flex-direction: row;
@@ -165,7 +170,7 @@
     }
     .block-card__description {
       opacity: 1;
-      @media (max-width: 650px) {
+      @media (max-width: 700px) {
         opacity: 0;
       }
     }
@@ -173,13 +178,27 @@
 
   .block-card__description {
     position: static;
+
     padding: 0.5em;
-    font-size: 0.7rem;
-    line-height: 1.2;
+    font-size: 11px;
+    line-height: 1.1;
     color: $color_primary;
     order: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    & span {
+      display: inline-block;
+
+      height: 45px;
+
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+
     @media (max-width: 700px) {
-      font-size: 0.6rem;
+      font-size: 10px;
     }
   }
 
@@ -191,11 +210,11 @@
     border-radius: 5px;
     z-index: 2;
     border: 2px solid $color_primary;
-    @media (max-width: 700px) {
+    @media (max-width: 850px) {
       width: 60px;
       height: 70px;
     }
-    @media (max-width: 520px) {
+    @media (max-width: 620px) {
       width: 40px;
       height: 70px;
       left: 10px;
@@ -204,44 +223,51 @@
   .discount-line {
     width: fit-content;
     top: -13px;
-    right: 10px;
+    right: 20px;
     z-index: 5;
   }
   .block-card__details {
-    grid-template-columns: 1.5fr 1fr 2fr 1fr 1fr 0.5fr;
+    grid-template-columns: 1fr 1fr 2fr 1fr 1fr 0.5fr;
     padding-left: 100px;
     align-content: center;
     place-items: center;
-    @media (max-width: 700px) {
+
+    @media (max-width: 850px) {
       padding-left: 80px;
     }
     @media (max-width: 650px) {
       grid-template-columns: 2fr 1fr 1fr 1fr 0.5fr;
     }
 
-    @media (max-width: 520px) {
+    @media (max-width: 620px) {
       padding-left: 50px;
       grid-template-columns: 2fr 2fr 1fr 1fr;
     }
 
     & .block-card__item-title {
       padding-left: 8px;
+      justify-self: left;
       order: 1;
-      @media (max-width: 700px) {
-        font-size: 0.7rem;
+
+      @media (max-width: 800px) {
+        font-size: 11px;
+      }
+      @media (max-width: 650px) {
+        font-size: 10.5px;
       }
     }
     & .block-card__item-brand {
       order: 2;
       @media (max-width: 700px) {
-        font-size: 0.6rem;
+        font-size: 9px;
       }
     }
     & .block-card__price {
       grid-column: 5/6;
       order: 4;
+      position: static;
       @media (max-width: 550px) {
-        font-size: 0.8rem;
+        font-size: 12px;
       }
     }
     & .block-card__cart {
